--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  font-size: 16px;
+  background-color: blanchedalmond;
+}
+.container{
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
