--- a/client/src/app/add/add.component.html
+++ b/client/src/app/add/add.component.html
@@ -2,12 +2,31 @@
   <h5 class="add__h5">Fill fileds</h5>
   <div class="add__area">
     <label class="add__label">Title</label>
-    <input name="title" type="text" class="add__input" />
+    <input
+      #someInput
+      name="title"
+      type="text"
+      class="add__input"
+      (input)="changeText($event)"
+      [value]="title"
+    />
     <label class="add__label">Text</label>
-    <input name="text" type="text" class="add__input" />
+    <input
+      name="text"
+      type="text"
+      class="add__input"
+      (input)="changeText($event)"
+      [value]="text"
+    />
   </div>
   <div class="add__basement">
-    <button class="add__btn">Send</button>
-    <button class="add__btn">Select</button>
+    <button
+      class="add__btn"
+      (click)="sendPost()"
+    >Send</button>
+    <button
+      class="add__btn"
+      (click)="focusDo()"
+    >Select</button>
   </div>
 </div>
