--- a/client/src/app/list/list.component.html
+++ b/client/src/app/list/list.component.html
@@ -1,8 +1,8 @@
 <div class="list">
   <div class="list__card">
-    <div class="list__x" (click)="delCard()"></div>
-    <h5 class="list__h5">This Article</h5>
-    <span class="list__span">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, pariatur?</span>
-    <span class="list__long" > is long text </span>
+    <div class="list__x" (click)="deletePost(i)"></div>
+    <h5 class="list__h5">{{ post.title }}</h5>
+    <span class="list__span">{{ post.text }}</span>
+    <span class="list__long" >{{ post.text.length > 7 ? 'Is long' : 'Is short' }}</span>
   </div>
 </div>
