--- a/client/src/app/list/list.component.scss
+++ b/client/src/app/list/list.component.scss
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     max-width: 600px;
+    min-width: 300px;
     position: relative;
   }
   &__x{
