--- a/client/src/app/add/add.component.html
+++ b/client/src/app/add/add.component.html
@@ -7,16 +7,14 @@
       name="title"
       type="text"
       class="add__input"
-      (input)="changeText($event)"
-      [value]="title"
+      [(ngModel)]="title"
     />
     <label class="add__label">Text</label>
     <input
       name="text"
       type="text"
       class="add__input"
-      (input)="changeText($event)"
-      [value]="text"
+      [(ngModel)]="text"
     />
   </div>
   <div class="add__basement">
