--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -12,3 +12,39 @@ body{
 .flex{
   display: flex;
 }
+
+.search {
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  &__input{
+    font-size: 1.1rem;
+    padding: 4px 8px;
+    border-radius: 5px;
+    border: 1px solid #000;
+    margin-bottom: 10px;
+  }
+  &__list{
+    display: flex;
+    flex-direction: column;
+  }
+  &__frame{
+    padding: 10px 0;
+  }
+  &__scope{
+    display: flex;
+    gap: 5px;
+  }
+}
+
+.pipe{
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  &>span{
+    font-size: 1.3rem;
+  }
+}
+
