--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -8,6 +8,7 @@
     [i]="i"
     (delPost)="delPost($event)"
   ></app-list>
+  <app-counter></app-counter>
   <div appDirective>
     hellow
   </div>
