--- a/client/src/app/form/form.component.scss
+++ b/client/src/app/form/form.component.scss
@@ -42,15 +42,72 @@
     padding: 4px 0;
     height: 19px;
   }
-  &__address{
+  &__address, &__skills{
     padding: 8px;
     border: 1px solid gray;
     border-radius: 10px;
+    position: relative;
   }
-  &__contry{
+  &__skills{
+    margin-top: 10px;
+  }
+  &__country{
 
   }
   &__select{
 
   }
+  &__hidden{
+    visibility: hidden;
+    position: absolute;
+  }
+  &__current{
+    background-color: white;
+    padding: 5px 8px;
+    border-radius: 8px;
+    position: relative;
+    cursor: pointer;
+    user-select: none;
+    &::before{
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: 2%;
+      transform: translateY(-50%);
+      border-color: transparent transparent gray transparent;
+      border-style: solid;
+      border-width: 0px 8px 8px 8px;
+    }
+    &--open::before{
+      transform: translateY(-50%) rotate(180deg);
+    }
+  }
+  &__choose{
+    position: relative;
+    margin-top: 5px;
+  }
+  &__dropped{
+    position: absolute;
+    border-radius: 8px;
+    top: 120%;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    overflow: hidden;
+    z-index: 10;
+  }
+  &__name{
+    padding: 5px 8px;
+    cursor: pointer;
+    border-bottom: 1px solid gray;
+    &:hover{
+      background-color: lightgray;
+    }
+    &:last-child{
+      border: none;
+    }
+  }
+
 }
