--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -1,43 +1,83 @@
 <section class="form__section">
   <div class="form__frame">
     <h5 class="form__h">Angular forms</h5>
-    <form class="form">
+    <form class="form" [formGroup]="profileForm" (ngSubmit)="onSubmit($event)">
       <div class="form__cell">
-        <label class="form__label">Email</label>
-        <input class="form__input" name="email" type="text" />
+        <label class="form__label" for="email">Email</label>
+        <input
+          class="form__input"
+          name="email"
+          type="text"
+          id="email"
+          formControlName="email"
+        />
         <small class="form__error"> text error </small>
       </div>
       <div class="form__cell">
-        <label class="form__label">Password</label>
-        <input class="form__input" name="password" type="password" />
+        <label class="form__label" for="password">Password</label>
+        <input
+          class="form__input"
+          name="password"
+          type="password"
+          id="password"
+          formControlName="password"
+        />
         <small class="form__error"> text error </small>
       </div>
       <div class="form__address">
         <h5 class="form__h form__h--small">Address</h5>
         <div class="form__country">
-          <select #selectRef class="form__select  form__hidden">
-            <option *ngFor="let country of countries;" value={{country.value}}>{{ country.country }}</option>
+          <select formControlName="country" name="country" #selectRef class="form__select  form__hidden" >
+            <option
+              *ngFor="let country of countries; index as i"
+              [ngValue]="country.value"
+              [attr.selected]="country.value === selected.value ? true : null"
+            >{{ country.country }}</option>
           </select>
-          <div class="form__choose">
-            <div
-              (click)="openCountry = !openCountry"
-              [ngClass]="{'form__current--open' : openCountry}"
-              class="form__current"
-            >{{ selected.country }}</div>
-            <div class="form__dropped" *ngIf="openCountry">
-              <span
-                *ngFor="let country of countries; index as i"
-                class="form__name"
-                (click)="putCountry(i)"
-              >{{ country.country }}</span>
-            </div>
-          </div>
+<!--          <div class="form__choose">-->
+<!--            <div-->
+<!--              (click)="openCountry = !openCountry"-->
+<!--              [ngClass]="{'form__current&#45;&#45;open' : openCountry}"-->
+<!--              class="form__current"-->
+<!--            >{{ selected.country }}</div>-->
+<!--            <div class="form__dropped" *ngIf="openCountry">-->
+<!--              <span-->
+<!--                *ngFor="let country of countries; index as i"-->
+<!--                class="form__name"-->
+<!--                (click)="putCountry(i)"-->
+<!--              >{{ country.country }}</span>-->
+<!--            </div>-->
+<!--            <input-->
+<!--              class="form__input"-->
+<!--              name="city" type="text"-->
+<!--              [value]="selected.city"-->
+<!--              (input)="changeCity($event)"-->
+<!--            />-->
+<!--          </div>-->
         </div>
       </div>
       <div class="form__skills">
         <h5 class="form__h form__h--small">Your skills</h5>
-        <div></div>
-        <button>Add</button>
+        <div class="form__list">
+          <input
+            *ngFor="let skill of skills; index as i"
+            name="skills"
+            type="text"
+            [attr.data-skill]="i"
+            class="form__input"
+            [value]="skill"
+            (blur)="inputSkill($event)"
+          />
+        </div>
+        <button
+          type="button"
+          class="form__btn"
+          (click)="appendSkill()"
+        >Add</button>
+      </div>
+      <div class="form__basement">
+        <button class="form__btn" type="submit" [disabled]="!profileForm.valid">Submit</button>
+        <button class="form__btn" type="reset">Reset</button>
       </div>
     </form>
   </div>
