--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -27,33 +27,33 @@
       <div class="form__address">
         <h5 class="form__h form__h--small">Address</h5>
         <div class="form__country">
-          <select formControlName="country" name="country" #selectRef class="form__select  form__hidden" >
+          <select formControlName="country" id="country" name="country" #selectRef class="form__select  form__hidden" >
             <option
               *ngFor="let country of countries; index as i"
-              [ngValue]="country.value"
-              [attr.selected]="country.value === selected.value ? true : null"
+              value="country.value"
+              [selected]="country.value === selected.value ? true: null"
             >{{ country.country }}</option>
           </select>
-<!--          <div class="form__choose">-->
-<!--            <div-->
-<!--              (click)="openCountry = !openCountry"-->
-<!--              [ngClass]="{'form__current&#45;&#45;open' : openCountry}"-->
-<!--              class="form__current"-->
-<!--            >{{ selected.country }}</div>-->
-<!--            <div class="form__dropped" *ngIf="openCountry">-->
-<!--              <span-->
-<!--                *ngFor="let country of countries; index as i"-->
-<!--                class="form__name"-->
-<!--                (click)="putCountry(i)"-->
-<!--              >{{ country.country }}</span>-->
-<!--            </div>-->
-<!--            <input-->
-<!--              class="form__input"-->
-<!--              name="city" type="text"-->
-<!--              [value]="selected.city"-->
-<!--              (input)="changeCity($event)"-->
-<!--            />-->
-<!--          </div>-->
+          <div class="form__choose">
+            <div
+              (click)="openCountry = !openCountry"
+              [ngClass]="{'form__current--open' : openCountry}"
+              class="form__current"
+            >{{ selected.country }}</div>
+            <div class="form__dropped" *ngIf="openCountry">
+              <span
+                *ngFor="let country of countries; index as i"
+                class="form__name"
+                (click)="putCountry(i)"
+              >{{ country.country }}</span>
+            </div>
+            <input
+              class="form__input"
+              name="city" type="text"
+              [value]="selected.city"
+              (input)="changeCity($event)"
+            />
+          </div>
         </div>
       </div>
       <div class="form__skills">
