--- a/client/src/app/form/form.component.scss
+++ b/client/src/app/form/form.component.scss
@@ -58,8 +58,8 @@
 
   }
   &__hidden{
-    //visibility: hidden;
-    //position: absolute;
+    visibility: hidden;
+    position: absolute;
   }
   &__current{
     background-color: white;
