--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,6 @@
+<app-header></app-header>
 <div class="container">
-  <app-card></app-card>
+<!--  <app-card></app-card>-->
 <!--  <app-form></app-form>-->
 <!--  <app-add-->
 <!--    (appendPost)="appendPost($event)"-->
