--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <section class="header__section">
   <div class="container header">
     <div class="header__paths">
-      <a class="header__login" href="/">Angular</a>
+      <a class="header__login" routerLink="/">Angular</a>
     </div>
     <div class="header__paths">
       <nav class="header__nav">
-        <a class="header__link header__link--active" href="/">Home</a>
-        <a class="header__link" href="/post">Post</a>
-        <a class="header__link" href="/about">About</a>
+        <a class="header__link" routerLinkActive="header__link--active" [routerLinkActiveOptions]="{exact: true}" routerLink="/">Home</a>
+        <a class="header__link" routerLinkActive="header__link--active" routerLink="/post">Post</a>
+        <a class="header__link" routerLinkActive="header__link--active" routerLink="/about">About</a>
       </nav>
       <button class="header__btn">Login</button>
       <button class="header__btn">logout</button>
