--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,11 +7,13 @@ body{
   max-width: 1400px;
   margin: 0 auto;
   padding: 0 10px;
+  flex-grow: 1;
 }
 
 body, html {
   padding: 0;
   margin: 0;
+  height: 100%;
 }
 
 .flex{
@@ -21,6 +23,13 @@ body, html {
 h1,h2,h3,h4,h5,h6{
   padding: 0;
   margin: 0;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  align-items: stretch;
 }
 
 .search {
