--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <main>
   <app-header></app-header>
   <div class="container">
-<!--    <router-outlet></router-outlet>-->
+    <router-outlet></router-outlet>
     <!--  <app-card></app-card>-->
     <!--  <app-form></app-form>-->
     <!--  <app-add-->
