--- a/client/src/app/article/article.component.html
+++ b/client/src/app/article/article.component.html
@@ -2,5 +2,8 @@
   <div class="article__content">
     <h1 class="article__h article__h--large">{{ article.title }}</h1>
     <span class="article__text">{{ article.text }}</span>
+    <a routerLink="more" >read more ...</a>
+    <router-outlet></router-outlet>
   </div>
 </section>
+
