--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -9,8 +9,8 @@
         <a class="header__link" routerLinkActive="header__link--active" routerLink="/post">Post</a>
         <a class="header__link" routerLinkActive="header__link--active" routerLink="/about">About</a>
       </nav>
-      <button class="header__btn">Login</button>
-      <button class="header__btn">logout</button>
+      <button (click)="login" class="header__btn">Login</button>
+      <button (click)="logout" class="header__btn">logout</button>
     </div>
   </div>
 </section>
